<resources>
  <string name="app_name">Ubiq</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_main">Lunary</string>
  <string name="fab_scan">Scan Address / Key</string>
  <string name="fab_add_watch">Lookup Address</string>
  <string name="fab_add_aswatch">Add as Watch Only Wallet</string>
  <string name="fab_gen_new">Generate New Wallet</string>
  <string name="fab_request">Request</string>
  <string name="fab_send">Send</string>
  <string name="fab_setwalletname">Set Wallet Name</string>
  <string name="fr_price_current_price">Current Price</string>
  <string name="fr_wallet_overall_balance">Overall Balance</string>
  <string name="fr_detail_acc_balance">Account Balance</string>
  <string name="main_ac_wallet_added_suc">Your wallet was added successfully</string>
  <string name="main_ac_wallet_added_er">Wallet was already added</string>
  <string name="main_ac_wallet_added_fatal">Err Not a valid ethereum eth_address_view</string>
  <string name="detail_acc_name_changed_suc">Wallet successfully renamed</string>
  <string name="title_activity_settings">Settings</string>
  <string name="pref_title_social_recommendations">Show zero amount transactions</string>
  <string name="pref_description_social_recommendations">Whether to hide contract calls without any ether amount or not</string>
  <string name="pref_title_start">Wallet as default tab</string>
  <string name="pref_sum_start">If isPagingEnabled the app will start preselected in the wallet tab instead of the price tab</string>
  <string name="pref_title_sync_frequency">Notification Sync</string>
  <string name="pref_sum_sync_frequency">Sync interval to check for new transactions</string>
  <string name="pref_currencys_title">Display Currency</string>
  <string-array name="pref_currencys">
    <item>USD</item>
    <item>EUR</item>
    <item>CHF</item>
    <item>GBP</item>
    <item>AUD</item>
    <item>CAD</item>
    <item>JPY</item>
    <item>RUB</item>
  </string-array>
  <string-array name="pref_sync_frequency_titles">
    <item>1 hour</item>
    <item>2 hours</item>
    <item>4 hours</item>
    <item>6 hours</item>
    <item>8 hours</item>
    <item>16 hours</item>
    <item>24 hours</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>1</item>
    <item>2</item>
    <item>4</item>
    <item>6</item>
    <item>8</item>
    <item>16</item>
    <item>24</item>
  </string-array>
  <string name="notification_title">Transaction Received</string>
  <string name="pref_title_new_message_notifications">Incoming Transactions</string>
  <string name="pref_title_new_message_notifications_sum">Notify you about incoming transactions to any of your wallets</string>
  <string name="prompt_email">Password</string>
  <string name="prompt_password">Confirm Password</string>
  <string name="action_sign_in">Generate</string>
  <string name="error_invalid_password">This password is too short (Min: 9)</string>
  <string name="error_incorrect_password">Passwords do not match</string>
  <string name="generate_text">You are about to generate a new and encrypted offline wallet on this device. We recommend choosing a strong password in order to be able to ensure the best security possible for your funds. Please note that generating a strong and secure wallet is a highly compute-intensive task that can take up to several minutes! This process will be performed in the background so you can still use your phone as you usually would in the meantime. The progress is displayed in the notification bar of your device and as soon as we have finished generating your wallet, we will let you know.</string>
  <string name="import_text">You are about to import an unencrypted private key. We recommend choosing a strong password in order to be able to ensure the best security possible for your funds. Please note that importing a strong and secure wallet is a highly compute-intensive task that can take up to several minutes! This process will be performed in the background so you can still use your phone as you usually would in the meantime. The progress is displayed in the notification bar of your device and as soon as we have finished generating your wallet, we will let you know.</string>
  <string name="wallet_gen_service_title">Generating New Wallet</string>
  <string name="wallet_gen_service_title_import">Importing Wallet</string>
  <string name="choose_recipient_enterscan">Enter / Scan Recipient Address</string>
  <string name="choose_recipient_contacts">Or Choose Recipient from Address Book</string>
  <string name="choose_your_address">From</string>
  <string name="send_to">To</string>
  <string name="choose_ether_amount">Available Ether</string>
  <string name="choose_gas">Transaction Cost</string>
  <string name="request_activity_ether">Request Amount</string>
  <string name="request_activity_to">Your Wallets / Addresses</string>
  <string name="no_tx_history">This is the transaction overview showing all ether sent and received to and from other people. After adding a wallet and transferring some ether to it, the transaction and all future transactions will be displayed here.</string>
  <string name="no_wallet_history">You currently do not have any wallets. You can easily create or import one using the button below.</string>
  <string name="app_intro_text">Welcome to Lunary - the free and Open Source Ether Wallet for Android! Before starting, please take some time to read through our terms of service.</string>
  <string name="app_intro_title">Lunary Wallet</string>
  <string name="app_intro_please_agree">Please read and agree to the terms of service before proceeding</string>
  <string name="app_intro_iagree">I agree to terms of service</string>
  <string name="fragment_send_ether_amount">Amount</string>
  <string name="fragment_send_cheaper">Cheaper</string>
  <string name="fragment_send_faster">Faster</string>
  <string name="fragment_send_total">Total</string>
  <string name="fragment_send_send_button">Send</string>
  <string name="fragment_recipient_hint_address">Address</string>
  <string name="fragment_recipient_continue">Continue</string>
  <string name="fragment_detail_share_button">Share</string>
  <string name="walletgen_title">Generate Wallet</string>
  <string name="request_ether_title">Request Ether</string>
  <string name="qr_scan_title">QR Address</string>
  <string name="activity_send_title">Transaction</string>
  <string name="last_24_hours">Last 24 Hours</string>
  <string name="last_7_days">Last 7 Days</string>
  <string name="last_30_days">Last 30 Days</string>
  <string name="last_year">Last Year</string>
  <string name="err_no_con">No internet connection</string>
  <string name="wallet_menu_title">Wallet Settings</string>
  <string name="wallet_menu_changename">Change Wallet Name</string>
  <string name="wallet_menu_copyadd">Address to Clipboard</string>
  <string name="wallet_menu_export">Export Wallet</string>
  <string name="wallet_menu_delete">Delete Wallet</string>
  <string name="wallet_suc_exported">Wallet successfully exported</string>
  <string name="wallet_no_permission">Please grant write permission to export wallets</string>
  <string name="wallet_one_at_a_time">Not So Fast</string>
  <string name="wallet_one_at_a_time_text">We are currently generating a wallet for you, you can see the progress in your notification bar. Don\'t worry, we will updateNotification you as soon as your wallet generation is finished :-) If you really wish to generate another one please wait for the current wallet to be completed first.</string>
  <string name="button_ok">OK</string>
  <string name="wallet_removal_title">ATTENTION: Wallet Removal</string>
  <string name="wallet_removal_sure">Are you sure you want to delete your watch only wallet?</string>
  <string name="wallet_removal_privkey">! THIS IS A WALLET WITH A PRIVATE KEY ! IF YOU HAVE NO BACKUP AND CONTINUE ALL YOUR ETHER ON THAT WALLET WILL BE LOST FOR EVER! ARE YOU SURE YOU WANT TO PROCEED? WALLET ADDRESS:</string>
  <string name="wallet_removal_last_warning">ARE YOU SURE? WALLET AND ALL COINS / TOKEN ON IT ARE GOING TO GET PERMANENTLY REMOVED. THIS IS THE LAST WARNING FOR WALLET:</string>
  <string name="button_yes">YES</string>
  <string name="button_no">NO</string>
  <string name="name_your_wallet">Name Your Wallet</string>
  <string name="button_cancel">Cancel</string>
  <string name="name_other_address">Name Other Address</string>
  <string name="trans_menu_title">Transaction Settings</string>
  <string name="trans_menu_changename">Change Address Name</string>
  <string name="trans_menu_viewreceiver">View Receiver Address</string>
  <string name="trans_menu_openinb">Open in Browser</string>
  <string name="trans_no_trans_found">No transactions found for this eth_address_view.</string>
  <string name="err_send_not_enough_ether">Not enough Ether on that Address</string>
  <string name="err_send_invalidamount">Invalid Amount</string>
  <string name="err_send_noreceiver">No receiver specified</string>
  <string name="err_send_noamount">No amount specified</string>
  <string name="name_your_address">Name Your Address</string>
  <string name="name_this_address">Name This Address</string>
  <string name="addressbook_menu_title">Addressbook Settings</string>
  <string name="addressbook_menu_remove">Remove</string>
  <string name="import_title">Import Wallet</string>
  <string name="import_button">Import</string>
  <string name="main_grant_permission_export">Please grant write permission to export Wallets</string>
  <string name="main_grant_permission_import">Please grant read permission to import Wallets</string>
  <string name="dialog_watch_only_title">Lookup Address</string>
  <string name="dialog_importing_wallets_title">Importing Wallets?</string>
  <string name="dialog_importing_wallets_text">We have detected %1$d new wallet%2$s in our Lunary folder. Would you like to import: %3$s</string>
  <string name="dialog_ex_nofull_title">No Full Wallet</string>
  <string name="dialog_ex_nofull_text">Watch only wallets can not be exported.</string>
  <string name="dialog_exporting_title">Exporting your Wallet</string>
  <string name="dialog_exporting_text">A copy of your Ethereum wallet will be placed inside the folder \"Lunary\" in the root directory of your Android phone. Please note that other applications that run on your device can technically access any wallets that you have exported. Due to this, we highly recommend erasing all exported wallets from the Lunary folder as soon as you have finished backing them up.</string>
  <string name="dialog_nofullwallet">No Full Wallet</string>
  <string name="dialog_nofullwallet_text">In order to send funds you need a full wallet with a private key. Please generate or import one first.</string>
  <string name="dialog_no_wallets">No Wallets</string>
  <string name="dialog_no_wallets_text">In order to request funds you need a wallet or a watch only eth_address_view.</string>
  <string name="dialog_no_wallets_found">No Wallets Found</string>
  <string name="dialog_no_wallets_found_text">Please place the wallet you want to import inside the Lunary folder and make sure it is correctly named. When importing from Mist or other desktop client you don\'t have to rename your wallet.</string>
  <string name="notification_ticker">Incoming Ether Transaction…</string>
  <string name="notification_transfersuc">Transfer successful</string>
  <string name="prefs_lock_with_pw">Lock with Password</string>
  <string name="prefs_lock_with_pw_sum">If isPagingEnabled Ubiq will ask you for a password before launching the app</string>
  <string name="prefs_set_pw">Set Password</string>
  <string name="prefs_set_pw_sum">Specify your login pattern</string>
  <string name="prefs_cat_security">Security</string>
  <string name="setting_erc_qr_encoding">Use ERC-67 QR Encoding</string>
  <string name="setting_cat_advanced">Advanced</string>
</resources>