<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <SwitchPreference
    android:defaultValue="false"
    android:key="zeroAmountSwitch"
    android:summary="@string/pref_description_social_recommendations"
    android:title="@string/pref_title_social_recommendations" />


  <SwitchPreference
    android:defaultValue="false"
    android:key="startAtWallet"
    android:summary="@string/pref_sum_start"
    android:title="@string/pref_title_start" />


  <SwitchPreference
    android:defaultValue="true"
    android:key="notifications_new_message"
    android:summary="@string/pref_title_new_message_notifications_sum"
    android:title="@string/pref_title_new_message_notifications" />

  <ListPreference
    android:defaultValue="3"
    android:entries="@array/pref_sync_frequency_titles"
    android:entryValues="@array/pref_sync_frequency_values"
    android:key="sync_frequency"
    android:negativeButtonText="@null"
    android:positiveButtonText="@null"
    android:summary="@string/pref_sum_sync_frequency"
    android:title="@string/pref_title_sync_frequency" />

  <ListPreference
    android:entries="@array/pref_currencys"
    android:entryValues="@array/pref_currencys"
    android:key="maincurrency"
    android:negativeButtonText="@null"
    android:positiveButtonText="@null"
    android:summary="%s"
    android:title="@string/pref_currencys_title" />

  <PreferenceCategory android:title="@string/prefs_cat_security">
    <SwitchPreference
      android:defaultValue="false"
      android:key="use_app_lock"
      android:summary="@string/prefs_lock_with_pw_sum"
      android:title="@string/prefs_lock_with_pw" />

    <PreferenceScreen
      android:summary="@string/prefs_set_pw_sum"
      android:title="@string/prefs_set_pw">

      <intent android:action="rehanced.com.simpleetherwallet.activities.SetAppLockActivity" />
    </PreferenceScreen>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/setting_cat_advanced">
    <SwitchPreference
      android:defaultValue="false"
      android:key="qr_encoding_erc"
      android:title="@string/setting_erc_qr_encoding" />
  </PreferenceCategory>
</PreferenceScreen>
