<FrameLayout android:id="@+id/swipeRefreshLayout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="5dp"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/choose_recipient_enterscan" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#7aa1a1a1" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
          android:id="@+id/receiver"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_weight="1"
          android:hint="@string/fragment_recipient_hint_address"
          android:inputType="text"
          android:maxLines="1" />

        <ImageButton
          android:id="@+id/scan_button"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="5dp"
          android:src="@drawable/ic_scan_qr" />

      </LinearLayout>

      <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/primary_dark"
        android:text="@string/fragment_recipient_continue"
        android:textColor="#FFFFFF" />

    </LinearLayout>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="10dp"
      android:text="@string/choose_recipient_contacts" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="5dp"
      android:background="#7aa1a1a1" />


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:showIn="@layout/activity_main" />

    </RelativeLayout>

  </LinearLayout>

</FrameLayout>


