<android.support.v4.widget.SwipeRefreshLayout android:id="@+id/swipe_refresh_layout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:fab="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
      android:id="@+id/progress_bar_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:indeterminate="true"
      fab:layout_constraintBottom_toBottomOf="parent"
      fab:layout_constraintEnd_toEndOf="parent"
      fab:layout_constraintStart_toStartOf="parent"
      fab:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
      android:id="@+id/recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"
      android:visibility="gone"
      fab:layout_constraintBottom_toBottomOf="parent"
      fab:layout_constraintEnd_toEndOf="parent"
      fab:layout_constraintStart_toStartOf="parent"
      fab:layout_constraintTop_toTopOf="parent"
      tools:listitem="@layout/wallet_item_adapter" />

    <TextView
      android:id="@+id/nothing_found"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"
      android:layout_marginTop="24dp"
      android:drawableTop="@drawable/as_ubiq_white_logo"
      android:gravity="center"
      android:text="@string/no_wallet_history"
      android:textAlignment="center"
      android:visibility="gone"
      tools:visibility="gone" />

    <com.github.clans.fab.FloatingActionMenu
      android:id="@+id/fab_menu_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|right"
      android:layout_marginEnd="16dp"
      android:visibility="gone"
      fab:layout_constraintBottom_toBottomOf="parent"
      fab:layout_constraintEnd_toEndOf="parent"
      fab:menu_animationDelayPerItem="20"
      fab:menu_colorNormal="@color/accent"
      fab:menu_colorPressed="@color/accent_2"
      fab:menu_colorRipple="@color/accent"
      tools:visibility="gone">

      <com.github.clans.fab.FloatingActionButton
        android:id="@+id/import_wallet_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wallet"
        fab:fab_label="@string/import_title"
        fab:menu_colorNormal="@color/accent"
        fab:menu_colorPressed="@color/accent_2"
        fab:menu_colorRipple="@color/accent" />

      <com.github.clans.fab.FloatingActionButton
        android:id="@+id/generate_wallet_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wallet"
        fab:fab_label="@string/fab_gen_new"
        fab:menu_colorNormal="@color/accent"
        fab:menu_colorPressed="@color/accent_2"
        fab:menu_colorRipple="@color/accent" />

      <com.github.clans.fab.FloatingActionButton
        android:id="@+id/watch_address_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_scan"
        fab:fab_label="@string/fab_add_watch"
        fab:menu_colorNormal="@color/accent"
        fab:menu_colorPressed="@color/accent_2"
        fab:menu_colorRipple="@color/accent" />

      <com.github.clans.fab.FloatingActionButton
        android:id="@+id/scan_address_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        fab:fab_label="@string/fab_scan"
        fab:menu_colorNormal="@color/accent"
        fab:menu_colorPressed="@color/accent_2"
        fab:menu_colorRipple="@color/accent" />

    </com.github.clans.fab.FloatingActionMenu>

  </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.SwipeRefreshLayout>
