<android.support.v4.widget.SwipeRefreshLayout android:id="@+id/swipe_refresh_layout2"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:fab="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:showIn="@layout/activity_main" />

    </LinearLayout>

    <FrameLayout
      android:id="@+id/nothing_found"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="#ffffff"
      android:visibility="gone">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"

        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:contentDescription="@null"
          android:src="@drawable/etherkont" />

        <TextView
          android:id="@+id/infoText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="20dp"
          android:gravity="center"
          android:text="@string/no_tx_history"
          android:textColor="#99323232"
          android:textSize="15sp" />
      </LinearLayout>
    </FrameLayout>

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true">

      <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:menu_colorNormal="@color/primary"
        app:menu_colorPressed="@color/accent_2"
        app:menu_colorRipple="@color/accent"
        app:menu_icon="@drawable/ic_new_tx"
        fab:menu_animationDelayPerItem="20"
        fab:menu_shadowColor="#444">

        <com.github.clans.fab.FloatingActionButton
          android:id="@+id/requestTx"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_action_request"
          app:menu_colorNormal="@color/primary"
          app:menu_colorPressed="@color/accent_2"
          app:menu_colorRipple="@color/accent"
          fab:fab_label="@string/fab_request" />

        <com.github.clans.fab.FloatingActionButton
          android:id="@+id/newTransaction"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_new_tx"
          app:menu_colorNormal="@color/primary"
          app:menu_colorPressed="@color/accent_2"
          app:menu_colorRipple="@color/accent"
          fab:fab_label="@string/fab_send" />

      </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>
  </FrameLayout>
</android.support.v4.widget.SwipeRefreshLayout>
