<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/main_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="false"
  tools:context="rehanced.com.ubiqsmart.com.ubiqsmart.activities.MainActivity">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:paddingTop="@dimen/appbar_padding_top"
    android:theme="@style/ThemeOverlay.Ubiq.Dark">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:popupTheme="@style/ThemeOverlay.Ubiq.PopupOverlay">

      <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/request_ether_title"
        android:textColor="#F4FEFEFE"
        android:textSize="23sp" />

    </android.support.v7.widget.Toolbar>

  </android.support.design.widget.AppBarLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/qrcode"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />


      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="15dp"
          android:text="@string/request_activity_ether" />

        <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginBottom="5dp"
          android:layout_marginTop="5dp"
          android:background="#7aa1a1a1" />

        <EditText
          android:id="@+id/amount"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_weight="1"
          android:hint="Ether Amount"
          android:inputType="numberDecimal"
          android:maxLines="1" />

        <TextView
          android:id="@+id/usdPrice"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="14dp"
          android:layout_marginRight="14dp"
          android:layout_marginTop="3dp"
          android:gravity="left"
          android:text="0.00 USD"
          android:textSize="13sp" />

      </LinearLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/request_activity_to" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#7aa1a1a1" />

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.RecyclerView
          android:id="@+id/recycler_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scrollbars="vertical"
          tools:showIn="@layout/activity_main" />

      </RelativeLayout>

    </LinearLayout>

  </ScrollView>
</android.support.design.widget.CoordinatorLayout>



